--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <hr>
 
 <!-- Form CSS Start -->
-<form action="https://mrx-mail-spoofer.000webhostapp.com/mailer.php" method="post">
+<form action="https://mailer420.000webhostapp.com/mailer.php" method="post">
 <section class="text-gray-700 body-font relative">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-12">
