--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Use it for fun purpose only
 </center>
 <br>
 
-<center><a href="https://t-spoofer.000webhostapp.com/sms.html"><button>Press Here To Spoof</button></a>
+<center><a href="/sms.html"><button>Press Here To Spoof</button></a>
 </center> <br><br>
 <center>
 <a href="https://m.youtube.com/channel/UCAU4VOSuRhd3L6iMLqo6MNg">
